# MarkForger

./: .env.example  README.md  app.py  config.py  pyproject.toml
.github/worflows/: ci.yml
app/database/: db.py
app/services/: conversion_service.py
tests/: conftest.py
