[project]
name = "markforger"
version = "1.0.0"
description = "Markdown to site static converter"
authors = [
    {name = "hello@pinnlabs.online"}
]
license = {text = "GPL-3.0 license"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.2,<0.35.0)",
    "pydantic-settings (>=2.9.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
ruff = "^0.11.6"
flake8 = "^7.2.0"
mypy = "^1.15.0"
pytest = "^8.3.5"
httpx = "^0.28.1"

